# appfs-platform

./: .gitignore  AGENTS.md  APPFS-adapter-grpc-bridge-v0.1.md  APPFS-adapter-implementation-plan-v0.1.md  APPFS-adapter-requirements-v0.1.md  APPFS-conformance-v0.1.md  APPFS-contract-tests-v0.1.md  APPFS-rc-closure-v0.1.md  APPFS-release-checklist-v0.1-rc1.md  APPFS-v0.1.md  CHANGELOG.md  CLAW.md  MANUAL.md  PARITY.md  README.md  README.zh-CN.md  ROADMAP.md  SPEC.md  USAGE.md  dist-workspace.toml
app_documents/: README.md
appfs/: AGENTS.md  MANUAL.md  README.md  README.zh-CN.md  appfs-compose.aiim-tinode.local.yaml  appfs-compose.aiim.local.yaml  appfs-compose.huoyan.yaml  appfs-compose.tinode.local.yaml
appfs-agent/: .gitignore  AGENTS.md  README.md  USAGE.md
appfs-agent/rust/crates/commands/: Cargo.toml
appfs-agent/rust/crates/commands/src/: bundled_skills.rs  lib.rs  skill_docs.rs
appfs/sandbox/: Cargo.toml
cli/: Cargo.toml  TEST-WINDOWS.md  build.rs  test-windows-appfs-managed.ps1  test-windows-mount.ps1
doc/: APPFS-adapter-developer-guide-v0.1.md  APPFS-adapter-developer-guide-v0.1.zh-CN.md  APPFS-adapter-requirements-v0.1.md  APPFS-adapter-requirements-v0.1.zh-CN.md  APPFS-compatibility-matrix-v0.1.zh-CN.md  APPFS-conformance-v0.1.zh-CN.md  APPFS-migration-note-v0.1.0-rc2.md  APPFS-project-status-and-roadmap-2026-03-17.md  APPFS-v0.1.0-rc2-freeze.md
docs/: APPFS-AGENT-方向讨论-v0.2.md  APPFS-multi-agent-identity-and-app-visibility-v0-design.md  APPFS-multi-agent-identity-流程验收文档.md  TINODE-APPFS-tree-v0-design.md  TINODE-APPFS-v0-design.md
integration/: APPFS-appfs-agent-attach-contract-v1.1.md  APPFS-joint-startup-launcher-contract-v0.1.md  APPFS-platform-roadmap-v0.1.md  README.md
(+546 files in other folders)
