[package]
name = "agentfs-sandbox"
version = "0.7.0-beta.1"
edition = "2021"
repository = "https://github.com/esp3j0/appfs"

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

# Linux-only dependencies for sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }
reverie-util = { git = "https://github.com/facebookexperimental/reverie" }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
